tests/baselines/reference/asyncFunctionDeclaration8.errors.txt
tests/cases/conformance/async/downlevel/asyncFunctionDeclaration/asyncFunctionDeclaration8.ts(1,11): error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
tests/cases/conformance/async/downlevel/asyncFunctionDeclaration/asyncFunctionDeclaration8.ts(1,12): error TS2304: Cannot find name 'await'.
tests/cases/conformance/async/downlevel/asyncFunctionDeclaration/asyncFunctionDeclaration8.ts(1,20): error TS2304: Cannot find name 'foo'.


==== tests/cases/conformance/async/downlevel/asyncFunctionDeclaration/asyncFunctionDeclaration8.ts (3 errors) ====
    var v = { [await]: foo }
              ~~~~~~~
!!! error TS1167: Computed property names are only available when targeting ECMAScript 6 and higher.
               ~~~~~
!!! error TS2304: Cannot find name 'await'.
                       ~~~
!!! error TS2304: Cannot find name 'foo'.